2002-04-10  Kevin Breit  <mrproper@ximian.com>

	* configure.in: Added the help/Makefile.am and help/C/Makefile.am.
	If the build breaks, look at this stuff.  It's not the first time
	I've killed the build.
	
	* Makefile.am: Made sure that help was in the SUBDIRS.  I don't
	want to break the build again. :/

2002-04-10  Rachel Hestilow  <hestilow@ximian.com>

	* configure.in:
	* capplets/Makefile.am (always_built_SUBDIRS): remove font

2002-04-10  jacob berkman  <jacob@ximian.com>

	* configure.in (AC_OUTPUT): remove
	capplets/theme-switcher/control/Makefile

Tue Apr  9 11:43:08 2002  Jonathan Blandford  <jrb@gnome.org>

	* capplets/accessibility/keyboard/Makefile.am: Change gnome2-* to
	gnome-*
	* capplets/default-applications/Makefile.am: ditto
	* capplets/file-types/Makefile.am: ditto
	* capplets/font/Makefile.am: ditto
	* capplets/keyboard/Makefile.am: ditto
	* capplets/mouse/Makefile.am: ditto
	* capplets/sound/Makefile.am: ditto
	* capplets/theme-switcher/Makefile.am: ditto
	* capplets/ui-properties/Makefile.am: ditto
	* control-center/Makefile.am: ditto
	* gnome-settings-daemon/Makefile.am: ditto

2002-04-05  jacob berkman  <jacob@ximian.com>

	* configure.ion (AC_OUTPUT): revert kevin's patch until help stuff
	actually builds

2002-04-05  Kevin Breit  <mrproper@ximian.com>

	* configure.in (dnl): Added help to the Makefile list.

2002-04-04  jacob berkman  <jacob@ximian.com>

	* configure.in (AC_OUTPUT): remove sawfish Makefile

2002-04-02  jacob berkman  <jacob@ximian.com>

	* configure.in: 
	* capplets/Makefile.am (always_built_SUBDIRS): remove
	default-applications

2002-03-28  jacob berkman  <jacob@ximian.com>

	* configure.in: add X libraries to link lines for things that make
	X calls (since pango/gtk don't pull those in for us)

Thu Mar 28 14:35:12 2002  Jonathan Blandford  <jrb@gnome.org>

	* configure.in (RELEASE): 1.99.6

2002-03-26  jacob berkman  <jacob@ximian.com>

	* capplets/Makefile.am (always_built_SUBDIRS): remove screensaver
