@@ -41,10 +41,10 @@ static gint apply_timeout_cb             (Preferences *prefs);
 
 #define DGI "/desktop/gnome/interface/"
 
-guint
+GType
 preferences_get_type (void)
 {
-	static guint preferences_type = 0;
+	static GType preferences_type = 0;
 
 	if (!preferences_type) {
 		GtkTypeInfo preferences_info = {
