@@ -1,3 +1,7 @@
+2002-04-11  jacob berkman  <jacob@ximian.com>
+
+	* (various files): fix improper use of guint as GType
+
 2002-04-10  Kevin Breit  <mrproper@ximian.com>
 
 	* configure.in: Added the help/Makefile.am and help/C/Makefile.am.
